[tool.poetry]
name = "rag-llm"
version = "0.1.0"
description = ""
authors = ["Cz4rNy213 <mikolaj.kolek2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.3"
langchain = "^0.3.4"
whisper = "^1.1.10"
pytube = "^15.0.0"
langchain-community = "^0.3.3"
scikit-learn = "^1.5.2"
docarray = "^0.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
